--- a/app/templates/camera.html
+++ b/app/templates/camera.html
@@ -22,6 +22,6 @@
         <label for="captureVideos" class="form-label">Capture video clips</label>
       </div>
     </div>
-    <script src="static/script.js"></script>
+    <script src="static/camera.js"></script>
   </body>
 </html>
