--- a/app/templates/client.html
+++ b/app/templates/client.html
@@ -5,7 +5,7 @@
     <title>Client</title>
   </head>
   <body>
-    Client page
+    <video playsinline autoplay></video>  
     <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj" crossorigin="anonymous"></script>
     <script src="static/client.js"></script>
   </body>
