--- a/app/templates/camera.html
+++ b/app/templates/camera.html
@@ -22,6 +22,7 @@
         <label for="captureVideos" class="form-label">Capture video clips</label>
       </div>
     </div>
+    <a href="{{ url_for('logout') }}">Logout</a>
     <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj" crossorigin="anonymous"></script>
     <script src="static/camera.js"></script>
   </body>
