save media files in separate folders

--- a/app/templates/camera.html
+++ b/app/templates/camera.html
@@ -21,6 +21,10 @@
         <input type="checkbox" class="checkbox" id="captureVideos"></input>
         <label for="captureVideos" class="form-label">Capture video clips</label>
       </div>
+      <div class="checkboxContainer">
+        <input type="checkbox" class="checkbox" id="sendNotifications" disabled></input>
+        <label for="sendNotifications">Send notifications</label>
+      </div>
     </div>
     <div>
       <p>Live stream: <span id="status"></span></p>
